--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
     </div>  <!-- Closing div tag for the content-wrapper -->
   </main>
 
-  <!-- <footer> -->
-    <!-- <div class="content-wrapper"> -->
+  <footer>
+    <div class="content-wrapper">
       <h2>See how much fun we have?</h2>
-      <!-- <div class="footer-content-wrapper"> -->
+      <div class="footer-content-wrapper">
         <img src="img/olena-bohovyk-__oq70K5F8c-unsplash.jpg" alt="family walking their dog">
         <img src="img/pexels-ahmed-16194157.jpg" alt="child petting a large brown dog">
         <img src="img/pexels-sam-lion-5733162.jpg" alt="child sitting on railing giving their dog a treat">
@@ -127,9 +127,9 @@
         <img src="img/pexels-raša-st-2476343.jpg" alt="small, cute puppy">
         <img src="img/pexels-rdne-stock-project-7516816.jpg" alt="parent and child walking thier dog down the sidewalk">
         <img src="img/pexels-samson-katt-5255581.jpg" alt="person walking their dog through the park">
-      <!-- </div>  --> <!-- Closing div tag for the footer-content-wrapper -->
-    <!-- </div>  --> <!-- Closing div tag for the content-wrapper -->
-  <!-- </footer> -->
+      </div>  <!-- Closing div tag for the footer-content-wrapper -->
+    </div>  <!-- Closing div tag for the content-wrapper -->
+  </footer>
 
 </body>
 
